cmake_minimum_required(VERSION 2.6)
project(ptrit_curl C)

option(PTRIT_PLATFORM "PTRIT_NEON PTRIT_AVX512 PTRIT_AVX2 PTRIT_AVX PTRIT_SSE2 PTRIT_SSE PTRIT_64" PTRIT_64)
option(PTRIT_CVT "PTRIT_CVT_ANDN PTRIT_CVT_ORN" PTRIT_CVT_ANDN)
option(PCURL_SBOX "PCURL_SBOX_OPT PCURL_SBOX_MEM2X PCURL_SBOX_INDEX" PCURL_SBOX_OPT)
option(PCURL_DEBUG "ON OFF" OFF)

add_definitions("-D${PTRIT_PLATFORM}")
add_definitions("-D${PTRIT_CVT}")
add_definitions("-D${PCURL_SBOX}")
if(${PCURL_DEBUG} STREQUAL ON)
add_definitions("-DPCURL_DEBUG")
endif(${PCURL_DEBUG} STREQUAL ON)

if((${CMAKE_C_COMPILER_ID} STREQUAL Clang) OR (${CMAKE_C_COMPILER_ID} STREQUAL GNU))
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
if(${PTRIT_PLATFORM} STREQUAL PTRIT_NEON)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv7-a -mfpu=neon")
elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_AVX512)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx512f -fno-asynchronous-unwind-tables")
elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_AVX2)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx2")
elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_SSE2)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
endif()
endif((${CMAKE_C_COMPILER_ID} STREQUAL Clang) OR (${CMAKE_C_COMPILER_ID} STREQUAL GNU))

add_executable(pcurl ptrit_curl.c test.c)
