cmake_minimum_required(VERSION 2.6)
project(ptrit_curl C)

option(PTRIT_PLATFORM "PTRIT_NEON PTRIT_AVX512 PTRIT_AVX2 PTRIT_AVX PTRIT_SSE2 PTRIT_SSE PTRIT_64" PTRIT_64)
option(PTRIT_CVT "PTRIT_CVT_ANDN PTRIT_CVT_ORN" PTRIT_CVT_ANDN)
option(PCURL_S2_CIRCUIT "PCURL_S2_CIRCUIT4 PCURL_S2_CIRCUIT5" PCURL_S2_CIRCUIT4)
option(PCURL_S2_ARGS "PCURL_S2_ARGS_PTR PCURL_S2_ARGS_LUT" PCURL_S2_ARGS_PTR)
option(PCURL_SBOX_UNWIND "PCURL_SBOX_UNWIND_1 PCURL_SBOX_UNWIND_2 PCURL_SBOX_UNWIND_4 PCURL_SBOX_UNWIND_8" PCURL_SBOX_UNWIND_8)
option(PCURL_STATE "PCURL_STATE_SHORT PCURL_STATE_DOUBLE" PCURL_STATE_SHORT)
option(PCURL_DEBUG "ON OFF" OFF)

add_definitions("-D${PTRIT_PLATFORM}")
add_definitions("-D${PTRIT_CVT}")
add_definitions("-D${PCURL_S2_CIRCUIT}")
add_definitions("-D${PCURL_S2_ARGS}")
add_definitions("-D${PCURL_SBOX_UNWIND}")
add_definitions("-D${PCURL_STATE}")
if("${PCURL_DEBUG}" STREQUAL "ON")
  add_definitions("-DPCURL_DEBUG")
endif("${PCURL_DEBUG}" STREQUAL "ON")

if((${CMAKE_C_COMPILER_ID} STREQUAL Clang) OR (${CMAKE_C_COMPILER_ID} STREQUAL GNU))
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
  if(${PTRIT_PLATFORM} STREQUAL PTRIT_NEON)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=armv7-a -mfpu=neon")
  elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_AVX512)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx512f -fno-asynchronous-unwind-tables")
  elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_AVX2)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx2")
  elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_SSE2)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
  endif()
endif((${CMAKE_C_COMPILER_ID} STREQUAL Clang) OR (${CMAKE_C_COMPILER_ID} STREQUAL GNU))

if(${CMAKE_C_COMPILER_ID} STREQUAL MSVC)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Oi /GL /Gm- /TC")
  if(${PTRIT_PLATFORM} STREQUAL PTRIT_AVX2)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /arch:AVX2")
  elseif(${PTRIT_PLATFORM} STREQUAL PTRIT_SSE2)
    if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /arch:SSE2")
    endif("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
  endif()
endif(${CMAKE_C_COMPILER_ID} STREQUAL MSVC)

add_executable(pcurl ptrit_curl.c test.c)
